prevent social-media-icons overflowing the x-axis

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -263,6 +263,8 @@ button.btn {
   }
   .social-media-group {
     color: $white-color;
+    margin-bottom: 1em;
+    margin-right: 2em;
     span {
       font-size: 1.5em;
     }
